sanger/ingress/contour-ws.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: isee
spec:
  virtualhost:
    fqdn: isee.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: isee
          port: 3838
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: isee-backend
spec:
  virtualhost:
    fqdn: isee-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: isee
          port: 3838
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: asthma-backend
spec:
  virtualhost:
    fqdn: asthma-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: asthma
          port: 9001
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: asthma
spec:
  virtualhost:
    fqdn: asthma.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: asthma
          port: 9001
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: scfind-backend
spec:
  virtualhost:
    fqdn: scfind-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: scfind
          port: 9000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: scfind
spec:
  virtualhost:
    fqdn: scfind.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: scfind
          port: 9000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: websocket
  namespace: jptt
spec:
  virtualhost:
    fqdn: jupyter-test.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
