sanger/ingress/ingress-jpt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter
  namespace: jpt
spec:
  rules:
    - host: jupyter-ingress.cellgeni.sanger.ac.uk
      http:
          paths:
          - backend:
              serviceName: proxy-public
              servicePort: 80
